auh controller